[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiosolr"
authors = [{name = "Brad Belyeu", email = "bradley.belyeu@youversion.com"}]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/bbelyeu/aiosolr"

[tool.black]
line-length = 100
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.githooks
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | yoyo
  )/
  | setup.py
)
'''

[tool.pytest.ini_options]
addopts = "-svx --cov=."
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.coverage.run]
omit =["tests/*"]
[tool.coverage.report]
omit =["tests/*"]
