[build-system]
requires = [
    "aiohttp >= 3.8",
    "bleach >= 6",
    "flit_core >=3.2,<4"
]
build-backend = "flit_core.buildapi"

[project]
name = "aiosolr"
authors = [{name = "Brad Belyeu", email = "bradley.belyeu@youversion.com"}]
classifiers=[
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp >= 3.8",
    "bleach >= 6",
]
dynamic = ["version", "description"]
keywords = ["solr", "asyncio", "aiohttp", "search"]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Home = "https://github.com/bbelyeu/aiosolr"

[tool.black]
line-length = 100
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.githooks
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | yoyo
  )/
  | setup.py
)
'''

[tool.pytest.ini_options]
addopts = "-svx --cov=."
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.coverage.run]
omit =["tests/*"]
[tool.coverage.report]
omit =["tests/*"]
